--- a/JTG/index.html
+++ b/JTG/index.html
@@ -70,7 +70,12 @@
                     </div>
 
                     <div class="column" style="width: 50%;">
-                        <img src="./assets/iPhone X.png" style="height: 90%; min-height: 95%; max-height:90%; width:70%;">
+                        <img src="./assets/iPhone X.png" style="
+                        max-height: 80%;
+                        width: 25%;
+                        position: absolute;
+                        bottom: 5%;
+                        right: 15%;">
                     </div>
                 </div>
             </div>
