--- a/JTG/index.html
+++ b/JTG/index.html
@@ -70,12 +70,7 @@
                     </div>
 
                     <div class="column" style="width: 50%;">
-                        <img src="./assets/iPhone X.png" style="
-                        max-height: 80%;
-                        width: 20%;
-                        position: absolute;
-                        bottom: 5%;
-                        right: 10%;">
+                        <img src="./assets/iPhone X.png" class="phone">
                     </div>
                 </div>
             </div>
